<resources>
    <string name="app_name">SimpleDoneList</string>
    <string name="allow">Allow</string>
    <string name="an_error_has_occurred">An error has occurred.</string>
    <string name="appear_on_top">Appear on top</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="dark_mode">Dark mode</string>
    <string name="delete">Delete</string>
    <string name="delete_history">Delete history</string>
    <string name="delete_the_history">Delete the history.</string>
    <string name="delete_the_things_done">Delete the things done.</string>
    <string name="delete_things_done">Delete things done</string>
    <string name="deny">Deny</string>
    <string name="display">Display</string>
    <string name="display_after_unlocking">Display after unlocking</string>
    <string name="done_list">Done list</string>
    <string name="drag_to_unlock">Drag to unlock</string>
    <string name="draw_unlock_pattern">Draw unlock pattern.</string>
    <string name="edit">Edit</string>
    <string name="enter_password_or_pin">Enter password or PIN.</string>
    <string name="font_size">Font size</string>
    <string name="format_12_hour" translatable="false">h:mm</string>
    <string name="format_12_hour2" translatable="false">h:mm aa</string>
    <string name="format_date">EEE, MMMM d</string>
    <string name="format_date2">MMMM d</string>
    <string name="format_date3" translatable="false">yy/M/dd</string>
    <string name="histories">Histories</string>
    <string name="lock_screen">Lock screen</string>
    <string name="done_list_service_is_running">Done list service is running.</string>
    <string name="lock_setting">Lock setting</string>
    <string name="lock_type">Lock type</string>
    <string name="no_histories">No histories.</string>
    <string name="request_app_permissions">Request app permissions</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="share_the_app">Share the app</string>
    <string name="show_on_lock_screen">Show on lock screen</string>
    <string name="unlock_with_back_button">Unlock with back button</string>
    <string name="version">Version</string>
    <string name="write_review">Write review</string>

    <string name="blind_screen_000">Unlocking with the home button is not allowed as per security policy.</string>
    <string name="fragment_edit_done_dialog_000">Write down what you did today. :)</string>
    <string name="fragment_permission_rationale_dialog_000">To use the app normally, you must allow the following permissions.</string>
    <string name="notification_builder_000">Please allow appear on top permission.</string>
    <string name="review_000">Thank you for your valuable review.</string>
    <string name="tooltip_000">Click to write what you did today. :)</string>
    <string name="tooltip_001">Click to view history. :)</string>
</resources>