<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/rounded_corners"
    android:backgroundTint="@color/surface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <TextClock
            android:id="@+id/text_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="sans-serif-light"
            android:format12Hour="@string/format_date"
            android:textSize="@dimen/text_size_20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="9월 17일 금요일" />

        <ImageView
            android:id="@+id/image_view_edit"
            android:layout_width="@dimen/width_24dp"
            android:layout_height="@dimen/height_24dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@+id/image_view_delete"
            app:layout_constraintTop_toTopOf="@+id/image_view_delete"
            app:srcCompat="@drawable/ic_round_edit_24"
            app:tint="@color/icon"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/image_view_delete"
            android:layout_width="@dimen/width_24dp"
            android:layout_height="@dimen/height_24dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_round_delete_24"
            app:tint="@color/icon"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_24dp"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/fragment_edit_done_dialog_000"
            android:importantForAutofill="no"
            android:maxHeight="@dimen/height_160dp"
            android:minHeight="@dimen/height_80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_clock" />

        <TextView
            style="@style/TextViewStyle.Button"
            android:id="@+id/text_view_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_view_save"
            app:layout_constraintTop_toBottomOf="@+id/edit_text"
            tools:text="취소" />

        <TextView
            style="@style/TextViewStyle.Button"
            android:id="@+id/text_view_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:enabled="false"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_cancel"
            tools:text="저장" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>