<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40000000"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_unlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:clipChildren="false"
            android:clipToPadding="false">

            <LinearLayout
                android:id="@+id/linear_layout_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_32dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextClock
                    android:id="@+id/text_clock_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:format12Hour="@string/format_12_hour"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="@dimen/shadow_dx"
                    android:shadowDy="@dimen/shadow_dy"
                    android:shadowRadius="@dimen/shadow_radius"
                    android:textColor="@color/white"
                    android:textSize="40dp"
                    tools:text="12시 00분" />

                <TextClock
                    android:id="@+id/text_clock_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:fontFamily="sans-serif-light"
                    android:format12Hour="@string/format_date"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="@dimen/shadow_dx"
                    android:shadowDy="@dimen/shadow_dy"
                    android:shadowRadius="@dimen/shadow_radius"
                    android:textColor="@color/white"
                    android:textSize="32dp"
                    tools:text="Fri, January 1" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/frame_layout_highlight"
                android:layout_width="@dimen/width_56dp"
                android:layout_height="@dimen/height_56dp"
                android:alpha="0.0"
                android:background="@drawable/highlight"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/linear_layout_icon"
                app:layout_constraintEnd_toEndOf="@+id/linear_layout_icon"
                app:layout_constraintStart_toStartOf="@+id/linear_layout_icon"
                app:layout_constraintTop_toTopOf="@+id/linear_layout_icon" />

            <LinearLayout
                android:id="@+id/linear_layout_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_view_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:elevation="@dimen/elevation_4dp"
                    android:padding="@dimen/padding_8dp"
                    app:srcCompat="@drawable/ic_round_history_24"
                    app:tint="@android:color/white"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/image_view_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:elevation="@dimen/elevation_4dp"
                    android:padding="@dimen/padding_8dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_round_photo_camera_24"
                    app:tint="@android:color/white"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/image_view_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:elevation="@dimen/elevation_4dp"
                    android:padding="@dimen/padding_8dp"
                    app:srcCompat="@drawable/ic_round_settings_24"
                    app:tint="@android:color/white"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/image_view_add"
            android:layout_width="@dimen/width_48dp"
            android:layout_height="@dimen/height_48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_round_add_48"
            app:tint="@android:color/white"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_24dp"
            android:layout_marginStart="@dimen/margin_24dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextClock
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:format12Hour="@string/format_date2"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                tools:text="January 1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:text="@string/done_list"
                android:textColor="@color/white" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_8dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginStart="@dimen/margin_16dp" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:layout_marginStart="@dimen/margin_32dp"
            android:background="#61FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_unlock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25">

        <FrameLayout
            android:id="@+id/frame_layout_unlock"
            android:layout_width="@dimen/width_56dp"
            android:layout_height="@dimen/height_56dp"
            android:layout_marginBottom="@dimen/margin_56dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/image_view_unlock"
                android:layout_width="@dimen/width_56dp"
                android:layout_height="@dimen/height_56dp"
                android:layout_gravity="center"
                android:background="@drawable/oval_stroke"
                android:duplicateParentState="true"
                android:padding="@dimen/padding_12dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_unlock_90px"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>